1.12.3openmpi
	- otfprofile, LaTeX output:
		- swapped x & y axis of the Message Data Rate Matrix
		- adapted labels to Vampir

1.12.2openmpi
	- fixed conflicts with OpenType Fonts:
		- install header files to INCLUDEDIR/open-trace-format
		- renamed OTF library to libopen-trace-format
		- renamed otfdump to otfprint
	- OTF library:
		- replaced temporary workaround for handling bogus zlib
		  sync. points by a more elaborated solution
	- otfprofile:
		- fixed build error when using the IBM XL C++ compiler
		- removed unnecessary '-k' option from otfshrink command

1.12.1openmpi
	- implemented workaround to avoid setting otf_errno when a false
	  error happens during OTF_RBuffer_Jump to a bogus zlib sync point

1.12salmon
	- OTF library:
		- fixed potential segmentation fault when appending a new
		  key-value pair to a list after removing another one
	- OTFAUX library:
		- 'OTFAUX_ThumbnailReader_read()' now correctly return success
		  after reading the thumbnail
	- otfprofile:
		- create VampirTrace filter file from irregularity analysis
	- otfaux:
		- fixed build errors on Solaris and NetBSD
		- fixed "time not increasing" error when generating inline
		  snapshots

1.11.2goldfish
	- lib OTFAUX:
		- speed-up messages matching, if no snapshots should
		  be generated

1.11.1goldfish
	- new 'OTF_MasterControl_clone()' function to simplify making a copy
	  of a master control object
	- otfaux:
		- keep the stream assignments of the input trace,
		  when using the '-o' option
	- otfmerge[-mpi]:
		- keep inline snapshots

1.11goldfish
	- added support for highly parallel trace writing using the
	  I/O Forwarding Scalability Layer (IOFSL) with atomic append
	  aggregation
	- added unique id record
	- added new snapshot records which complete them by now
	- added new definition record to indicates at which
	  timestamps are snapshots or statistics available
	- new 'OTF_KeyValueList_clone()' function to simplify making a copy
	  of a key-value list