@@ -39,25 +39,27 @@ typedef struct definitionInfoS
   uint8_t     otfVersionSub;
   uint64_t    traceFileSize;
   uint64_t    traceUniqueId;
-  uint64_t    counterCollectiveOperation;
   uint64_t    counterDefinitionComment;
   uint64_t    counterSourceFileName;
   uint64_t    counterFunctionGroupDefinition;
   uint64_t    counterFunctionDefinition;
+  uint64_t    counterCollectiveOperationDefinition;
   uint64_t    counterProcessGroupDefinition;
   uint64_t    counterProcessDefinition;
   uint64_t    counterCounterDefinition;
   uint64_t    counterCounterGroupDefinition;
+  uint64_t    counterMarkerDefinition;
   uint64_t    counterLeave;
   uint64_t    counterEnter;
   uint64_t    counterSend;
   uint64_t    counterReceive;
-  uint64_t    counterDefinitionMarker;
   uint64_t    timerResolution;
   uint64_t    counterRMAPut;
   uint64_t    counterRMAPutRemoteEnd;
   uint64_t    counterRMAGet;
   uint64_t    counterRMAEnd;
+  uint64_t    counterMarker;
+  uint64_t    counterCollectiveOperation;
   uint64_t    counterFileOperation;
   uint64_t    counterSnapshot;
 } definitionInfoT;
@@ -94,6 +96,10 @@ int handleDefCounter( void *userData, uint32_t stream, uint32_t counter,
 
 int handleDefMarker( void *userData, uint32_t stream, uint32_t token,
                      const char *name, uint32_t type );
+
+int handleDefCollectiveOperation( void *userData, uint32_t stream,
+                                  uint32_t collOp, const char *name,
+                                  uint32_t type );
 
 int handleDefProcessGroup( void *userData, uint32_t stream, uint32_t procGroup,
                            const char *name, uint32_t numberOfProcs,
@@ -141,9 +147,17 @@ int handleRMAEnd( void *userData, uint64_t time, uint32_t process,
                   uint32_t remote, uint32_t communicator, uint32_t tag,
                   uint32_t source );
 
-int handleDefCollectiveOperation( void *userData, uint32_t stream,
-                                  uint32_t collOp, const char *name,
-                                  uint32_t type );
+int handleMarker( void *userData, uint64_t time, uint32_t process,
+                  uint32_t token, const char* text );
+
+int handleCollectiveOperation( void *userData, uint64_t time,
+                               uint32_t process, uint32_t collective,
+                               uint32_t procGroup, uint32_t rootProc,
+                               uint32_t sent, uint32_t received,
+                               uint64_t duration, uint32_t source );
+
+int handleEndCollectiveOperation( void *userData, uint64_t time,
+                                  uint32_t process, uint64_t matchingId );
 
 int handleFileOperation( void *userData, uint64_t time, uint32_t fileid,
                          uint32_t process, uint64_t handleid,
